# rdk-x5-elderly-companion-robot

./: .gitignore  README.md
chassis_voice_x5/: README.md
chassis_voice_x5/ros_voice/: .gitignore  README.md  package.xml  setup.cfg  setup.py
chassis_voice_x5/ros_voice/launch/: voice.launch.py
chassis_voice_x5/ros_voice/realtime_asr/: asr.py  audio.py  commands.py  config.py  llm.py  main.py  pipeline.py  state.py  tts.py  vad.py  wake_word.py
chassis_voice_x5/ros_voice/ref codes/: 1.声卡设备测试实验.py  10.离线部署SenceVoice_QWen2.5_pytts3实时对话模型实验.py  11.离线部署SenceVoice_QWen2.5_edgeTTS实时对话模型实验.py  12.离线部署SenceVoice_QWen2.5_kokoro实时对话模型实验.py  13.离线部署SenceVoice_QWen2.5_edgeTTS_实时检测实验.py  14.离线部署SenceVoice_QWen2.5VL_edgeTTS视觉多模态实时检测实验.py  15.0.离线声波识别测试.py  15.1离线部署SenceVoice_kws_CAM声波识别实时对话大模型实验.py  16.AI语音模块机器人控制实验.py  17.在线qwen-image-plus大模型文生图实验.py  18.摄像头识别场景分析并内容生成新图趣味互动实验.py  2.测试AI模块录音功能实验.py  4.kokoro语音合成实验.py  5.pyttsx3语音合成实验.py  6.使用用FunASR工具包调用SenseVoiceSmall语音识别实验.py  7.0.基于fsmn-vad活动检测模型实验.py  7.1.测试视频录制及语音录制多线程实验.py  7.2.基于fsmn-vad活动检测和SenseVoiceSmall语音识别实时检测实验_.py  8.0.Ollama部署qwen2.5vl多模态模型Python API实时调用实验.py  8.1.ollamma部署Qwen1.8b大语音对话模型python API完成实时对话实验.py  9.0.fsmn-vad活动语音唤醒视频语音测试实验.py  9.1.离线调用QWen2.5-VL多模态视频分析实验.py  9.2.离线调用QWen2.5_VL多模态进行实时视频分析及实时文字输出互动实验.py
chassis_voice_x5/ros_voice/ref docs/: openaichat.md
chassis_voice_x5/ros_voice/ros_voice/: brain_node.py  control_node.py  voice_node.py
chassis_voice_x5/ros_voice/test/: main.py  monitor_rms.py
chassis_voice_x5/src/: ROS2-V5.0(humble)常用指令.txt
chassis_voice_x5/src/largemodel/config/: model_config.yaml
chassis_voice_x5/src/largemodel/resources_file/: qwen3-vl-2d.py
chassis_voice_x5/src/turn_on_wheeltec_robot/config/: wheeltec_param.yaml
chassis_voice_x5/src/turn_on_wheeltec_robot/launch/: wheeltec_lidar.launch.py
chassis_voice_x5/src/wheeltec_bodyreader/bodyreader/: CMakeLists.txt
chassis_voice_x5/src/wheeltec_mic_aiui/: CMakeLists.txt  package.xml
chassis_voice_x5/src/wheeltec_mic_aiui/AIUI/msc/5f112b13bafaeb1793090c5be7bc90bc/local.6.6.0001.0047/: local.cache
chassis_voice_x5/src/wheeltec_mic_aiui/AIUI/msc/5f112b13bafaeb1793090c5be7bc90bc/ns.6.6.0001.0047/: ns.cache
chassis_voice_x5/src/wheeltec_mic_aiui/AIUI/msc/7b8b82d171b126a5dcdd8e70adb0e4d3/ns.6.6.0001.0047/: ns.cache
chassis_voice_x5/src/wheeltec_mic_aiui/include/: AudioProvider.h  chat_service.h  feedback.h  motion_control.h
chassis_voice_x5/src/wheeltec_mic_aiui/include/aiui/: AIUIConstant.h  PcmPlayer_C.h
chassis_voice_x5/src/wheeltec_mic_aiui/launch/: aiui_chat.launch.py  mic_start.launch.py
chassis_voice_x5/src/wheeltec_mic_aiui/node/: chat_service.cpp  command_recognition.cpp  ros2_service.cpp
chassis_voice_x5/src/wheeltec_mic_aiui/src/: AudioProvider.cpp  PCMPlayer.cpp  Processor.cpp
chassis_voice_x5/底盘控制/scripts/: sound_bodyfollower_node.py
docs/: README.md
scripts/: check_system_topics.sh  start_chassis_voice.sh  start_vision_arm.sh
src/simple_follower_ros2/simple_follower_ros2/: laserTracker.py
src/wheeltec_mic_aiui/config/: param.yaml
src/wheeltec_mic_aiui/include/: AudioListenThread.h  PCMPlayer.h  Processor.h  command_recognition.h  node_feedback.h
src/wheeltec_mic_aiui/launch/: base.launch.py
src/wheeltec_mic_aiui/node/: motion_control.cpp  node_feedback.cpp
src/wheeltec_mic_aiui/src/: AudioListenThread.cpp
src/wheeltec_radar/: CMakeLists.txt
src/wheeltec_radar/src/: wheeltec_radar.cpp
src/wheeltec_robot_nav2/map/: WHEELTEC.yaml
vision_arm_x5/: README.md  start_auto_grasp.sh
vision_arm_x5/Orbbec_ws/: README.md
vision_arm_x5/hand_to_eye/: README.md  end_position_publisher.py  solve_handeye.py  validate_handeye.py
vision_arm_x5/hand_to_eye/data/: poses.csv  poses_backup_before_drop15.csv
底盘控制/launch/: bodyfollow.launch.py
(+73 files in other folders)
